fixed hiding analyze panel on popup dragging, overflow tables in popup

--- a/src/bma.client/css/BMA_less.less
+++ b/src/bma.client/css/BMA_less.less
@@ -446,6 +446,13 @@ label[aria-pressed='true'] .bma-inhibit-img {
     padding: 0;
 }
 
+.optionsNames {
+    width:100px;
+    text-overflow:ellipsis;
+    -ms-text-overflow:ellipsis;
+    -o-text-overflow:ellipsis;
+}
+
 ///BMA Visibility options ending
 
 .bma-modeltoolbarcontainer, .bma-analyticstoolbarcontainer {
@@ -873,9 +880,9 @@ label[aria-pressed='true'] .bma-inhibit-img {
     width: 50px;
 }
 
-.ui-tabs > div {
+/*.ui-tabs > div {
     border: 1px solid lightgray;
-}
+}*/
 
 .bma-futhertesting-bifurcations-icon {
     background-image: url("../images/bifurcations.png");
@@ -1044,6 +1051,14 @@ label[aria-pressed='true'] .bma-inhibit-img {
 
 ///Simulation expanded ending
 
+
+.proof-expanded {
+    overflow: scroll;
+    height: 100%;
+    width: 100%;
+    min-width: inherit;
+    white-space: nowrap;
+}
 
 ///Popup windows 
 
@@ -1332,10 +1347,13 @@ label[aria-pressed='true'] .bma-inhibit-img {
      }
 }
 
+
+
 .bma-variables-options-editor-li(){
+    
     margin-bottom: 10px;
     background-color: @bmaeditor-butons-background-color;
-    border-radius: 15px;
+    border-radius: @buttons-border-radius;
     position:relative;
     padding: 0 5px;
     cursor: pointer;
@@ -1429,33 +1447,72 @@ label[aria-pressed='true'] .bma-inhibit-img {
 }
 
 
-/*.inputs-list-header:hover{
-    .inputs-expandbttn {
-        border-bottom-color: lightgray;
-    }
-}*/
-
-/*.inputs-list-header-collapsed::after{
-    /*.little-triangle();
-    .scaleY-transform();
-    content: "";
-    .triangle-down;
-    /*width: 0;
-    height: 0;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-top: 5px solid gray;
-    margin: 5px;
-    position: absolute;
-    top:10px;
-    right:5px;
-}*/
-
-/*.inputs-list-content:hover{
-    color: @font-color-hover;        
-}*/
-
-
-
-
 ///Variables options editor ending
+
+
+.ui-tabs .ui-tabs-nav .ui-tabs-anchor {
+    padding: .2em .5em;
+}
+
+.idd-axis {
+    font-size: 12px;
+}
+
+
+.bma-userdialog{
+    .popup-window-general();
+    .popup-window-shadow();
+    .big-font();
+    width: 300px;
+    z-index:5;
+    padding:15px;
+    border-radius:@bma-toolbar-icon-border-radius;
+}
+
+.bma-userdialog-btns-container{
+    float: right;
+    margin-top: 15px;
+}
+
+@buttons-border-radius: 15px;
+
+.bma-userdialog button {
+    border: none;
+    border-radius: @buttons-border-radius;
+    margin: 5px;
+    cursor: pointer;
+    &:hover {
+        background-color: darken(@odd-item-color, 20%);
+    }
+}
+
+.ui-menu {
+    white-space: nowrap;
+}
+
+.ui-widget button{
+    font-size:13px;
+}
+
+
+.ui-selected {
+    background-color: gray;
+}
+
+::-webkit-scrollbar {
+    width: 17px;
+    height: 17px; 
+}
+ 
+  
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: gray;
+    /*-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);*/ 
+}
+   
+
+/*.bma-toolbarpanel-elementstoolbar {
+    /*display: inline-block;
+    margin-left: calc(40% - 390px);
+}*/
